Pilar3/k8s/apps/nct-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nct-api
spec:
  type: ClusterIP
  selector:
    app: nct-api
  ports:
    - port: 80
      targetPort: 8888
