Pilar3/k8s/apps/nct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nct-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # cert-manager: emitir el cert con este issuer y guardarlo en el secret del tls
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - poptoken.136.112.59.83.nip.io
      secretName: nct-tls
  rules:
    - host: poptoken.136.112.59.83.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nct-api
                port:
                  number: 80
